<resources>
  <string name="app_name">Mystic Number</string>
  <string name="search">Search</string>
  <string name="enter_a_number">Enter A Number</string>
  <string name="trivia">Trivia</string>
  <string name="date">Date</string>
  <string name="math">Math</string>
  <string name="search_by">Search By</string>
  <string name="random">Random</string>
  <string name="input">Input</string>
  <string name="choose_query_type">Choose Query Type</string>
  <string name="an_api_for_interesting_facts_about_numbers">An API \nfor interesting facts \nabout
    numbers
  </string>
  <string name="app_logo_infinity">App Logo(Infinity)</string>
  <string name="year">Year</string>
  <string name="search_to_display_results">Search To Display Results</string>
</resources>
