<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context="com.notadeveloper.app.mysticnumber.MainActivity">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/ic_infinity"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_logo_infinity"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textStyle="bold"
        android:text="@string/an_api_for_interesting_facts_about_numbers"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="16dp" app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="16dp"
    />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radiogrouptype"
        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:text="@string/choose_query_type"/>
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/input"
          android:text="@string/input"
          android:checked="true"
      />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/random"
          android:text="@string/random"
      />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radiogrouptype"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent">
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:text="@string/search_by"
      />
      <RadioButton android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/math"
          android:text="@string/math"
          android:checked="true"
      />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/trivia"
          android:text="@string/trivia"

      />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/date"
          android:text="@string/date"
      />

      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/year"
          android:text="@string/year"
      />


    </RadioGroup>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radiogroup"
        android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="@+id/radiogroup"
        android:layout_marginBottom="8dp" app:layout_constraintLeft_toRightOf="@+id/radiogroup"
        android:id="@+id/editText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:drawableStart="@mipmap/ic_launcher"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        android:filterTouchesWhenObscured="true" android:id="@+id/button"/>
    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
        android:id="@+id/resulttext"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/search_to_display_results"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button"/>

    <android.support.constraint.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp" android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="20dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp" android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="20dp"/>
  </android.support.constraint.ConstraintLayout>
</ScrollView>